--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
-    "name": "Oda Music",
-    "description": "Music allow you to stream music trought the telegram voice chat feature.",
-    "keywords": ["music", "voice chat", "telegram"],
+    "name": "Codexun Music",
+    "description": "Telegram Music Bot allows you to stream music trought the telegram voice chat feature.",
+   "logo": "https://telegra.ph/file/1c41ded2dd871eb36bd7e.png",
+    "keywords": ["telegram music bot", "voice chat", "pytgcalls"],
     "repository": "https://github.com/UserLazy/Oda-Music",
     "stack": "container",
     "env": {
