--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
     "name": "Codexun Music",
     "description": "Telegram Music Bot allows you to stream music trought the telegram voice chat feature.",
-   "logo": "https://telegra.ph/file/1c41ded2dd871eb36bd7e.png",
+   "logo": "https://telegra.ph/file/51dbfbcca906105d06f37.jpg",
     "keywords": ["telegram music bot", "voice chat", "pytgcalls"],
-    "repository": "https://github.com/UserLazy/Oda-Music",
+    "repository": "https://github.com/PavanMagar/CodexunMusic",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
