--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Codexun Music",
-    "description": "Telegram Music Bot allows you to stream music trought the telegram voice chat feature.",
+    "description": "Telegram Music Bot from Team Codexun allows you to stream music trought the telegram voice chat feature.",
    "logo": "https://telegra.ph/file/51dbfbcca906105d06f37.jpg",
     "keywords": ["telegram music bot", "voice chat", "pytgcalls"],
     "repository": "https://github.com/PavanMagar/CodexunMusic",
